# sithra-rs-headless

./: Cargo.toml
crates/headless/: Cargo.toml
crates/headless/src/: config.rs  main.rs  procedures.rs
crates/headless/static/: config.toml
crates/sithra_headless_common/: Cargo.toml
crates/sithra_headless_common/src/: lib.rs
