[package]
name = "headless"
version = "0.1.0"
edition.workspace = true

[dependencies]
ioevent.workspace = true
sithra_common.workspace = true
log.workspace = true
tokio.workspace = true
sithra_headless_common.workspace = true

uuid = { version = "1.16.0", features = ["v4"] }
headless_chrome = "1.0.17"