[package]
name = "headless"
version = "0.1.0"
edition.workspace = true

[dependencies]
ioevent.workspace = true
sithra_common.workspace = true
log.workspace = true
tokio.workspace = true
sithra_headless_common.workspace = true
serde.workspace = true

uuid = { version = "1.16.0", features = ["v4"] }
fantoccini = "0.21.5"
toml = "0.8.20"
parking_lot = "0.12.3"
triomphe = "0.1.14"
serde_json = "1.0.140"
